cmake_minimum_required(VERSION 2.6)
project(cpp_study)
set(CMAKE_CXX_STANDARD 14)

macro(use_cxx11)
if(CMAKE_VERSION VERSION_LESS "3.1.3")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
else()
    set(CMAKE_CXX_STANDARD 11)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()
endmacro(use_cxx11)

use_cxx11()

include_directories("${PROJECT_BINARY_DIR}")

include_directories("${PROJECT_SOURCE_DIR}/section0")
include_directories("${PROJECT_SOURCE_DIR}/section1")
# include_directories("${PROJECT_SOURCE_DIR}/section2")
# include_directories("${PROJECT_SOURCE_DIR}/section3")
include_directories("${PROJECT_SOURCE_DIR}/section4")
include_directories("${PROJECT_SOURCE_DIR}/section5")
add_subdirectory(section0)
add_subdirectory(section1)
# add_subdirectory(section2)
# add_subdirectory(section3)
add_subdirectory(section4)
add_subdirectory(section5)
set(EXTRA_LIBS ${EXTRA_LIBS} section0)
set(EXTRA_LIBS ${EXTRA_LIBS} section1)
# set(EXTRA_LIBS ${EXTRA_LIBS} section2)
# set(EXTRA_LIBS ${EXTRA_LIBS} section3)
set(EXTRA_LIBS ${EXTRA_LIBS} section4)
set(EXTRA_LIBS ${EXTRA_LIBS} section5)
